2006-08-22  Karoliina Salminen <karoliina.t.salminen@nokia.com>

	Applied patch for bug N#31081 Home enters into Layout mode in low memory state.
	layout-manager.c
		* changed the layoutmode to begin only if the device is not in lowmem state.
		* added the hardware state signal callback
		* moved the layoutmode starting functionality to that function.
		layout-manager.c
		* Added low memory check to layout_mode_begin
		* Most of the functionality of layout_mode_begin function has been moved to
 		fuction layout_hw_cb_f
	* configure.ac: 2.9.21.5

2006-08-21  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "The extra 'zZZ' icons do not come up on doing BG killing."
	(Closes NB#38259)
	* hildon-navigator/hn-wm.c: signal the AS to update its icons when an
	  application goes to hibernation

2006-08-21  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Shortcut to task switcher working where no applications
	are open." (Closes NB#38033)
	* hildon-navigator/hn-app-switcher.c: do not open the AS menu when
	  no application is started

2006-08-18  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/plugins.conf: Corrected library file for
	  the contacts plugin
	* configure.ac: 2.9.21.4

2006-08-15  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-keys.c:
	  - revert the flag system
	  - do not allow F4, F6, F7, F8 and F10 as shortcuts
	* configure.ac: 2.9.21.3

2006-08-15  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-keys.c:
	  - add flag when we fake a key event so we don't re-grab it
	* configure.ac: 2.9.21.2

2006-08-15  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-keys.c:
      - do not send a fake F5 event when receiving Home shortcut
	  - do not grab F5 to be Home, because it conflicts with the
	    MCE handler
	* configure.ac: 2.9.21.1

2006-08-14  Moises Martinez <moises.martinzes@nokia.com>

	* configure.ac: 2.9.21

2006-08-14  Moises Martinez <moises.martinzes@nokia.com>
